# shim

./: .gitignore  README.md  pyproject.toml
assets/: AppIcon.icns
codex_shim/: catalog.py  cli.py  dialog.py  menubar.py  providers.py  server.py  settings.py  translate.py
tests/: test_cli.py  test_settings_catalog.py
