[project]
name = "codex-shim"
version = "0.3.0"
description = "One-click model switcher for Codex Desktop — toggle between ChatGPT subscription and DeepSeek / OpenRouter / Google / Anthropic / any OpenAI-compatible provider, with reasoning-effort control, from the macOS menubar."
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "rumps>=0.4.0",
]

[project.scripts]
codex-shim     = "codex_shim.cli:main"
codex-shim-app = "codex_shim.menubar:main"

[tool.setuptools.packages.find]
include = ["codex_shim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
